add kernel.mk to build kernel image on-fly
The patch collapses all changes of kernel.mk into one.
kernel.mk: Don't assume kernel source is in kernel/

Use a new variable TARGET_KERNEL_SOURCE which the board can specify in
its configuration. If variable is not set, revert to previous behavior.

The kernel build system places all modules into a nice hierarchy in the
output directory. However, our current android system expects them in
a flat hierarchy at system/lib/modules. This change links the modules
from the kernel installation path into system/lib/modules.

The ideal solution would be to makes the links symbolic, however doing
that uncovers a bug in make_ext4fs and prevents it from building the
system image. Until that bug can be fixed, we need to use hard links.

Signed-off-by: Matt Gumbel <matthew.k.gumbel@intel.com>

--- a/core/Makefile
+++ b/core/Makefile
@@ -407,6 +407,8 @@ $(INSTALLED_BOOTIMAGE_TARGET): $(MKBOOTIMG) $(INTERNAL_BOOTIMAGE_FILES)
 	$(hide) $(call assert-max-image-size,$@,$(BOARD_BOOTIMAGE_PARTITION_SIZE),raw)
 endif # TARGET_BOOTIMAGE_USE_EXT2
 
+include $(BUILD_SYSTEM)/kernel.mk
+
 else	# TARGET_NO_KERNEL
 # HACK: The top-level targets depend on the bootimage.  Not all targets
 # can produce a bootimage, though, and emulator targets need the ramdisk
@@ -744,7 +746,7 @@ define build-systemimage-target
       $(TARGET_OUT) $(systemimage_intermediates)/system_image_info.txt $(1)
 endef
 
-$(BUILT_SYSTEMIMAGE): $(FULL_SYSTEMIMAGE_DEPS) $(INSTALLED_FILES_FILE)
+$(BUILT_SYSTEMIMAGE): $(INSTALLED_KERNEL_TARGET) $(INTERNAL_SYSTEMIMAGE_FILES) $(INTERNAL_USERIMAGES_DEPS)
 	$(call build-systemimage-target,$@)
 
 INSTALLED_SYSTEMIMAGE := $(PRODUCT_OUT)/system.img
