kernel.mk: kernel build improvements
() Kernel devs have requested the ability to update modules over
Fastboot without having to overwrite the entire system image.
Some changes have been made here so that the kernel firmware and
modules are now created as tarballs in $OUT. These components
are created under /system/lib as a side effect, so the dependencies
for the system image targets have been updated to reflect this.
If the kernel build does not use modules or firmware the respective
tarballs will be empty.

() Modules are no longer hardlinked to the base modules directory.
We just move them all there to avoid situations where the hardlinks
get turned into separate files.  We don't have modprobe anyway; once
we do we can simply remove the mv operation.

() A build target has been created to put the System.map along
with the other kernel build deliverables, so that it can be
included in releases.

() The ability to use prebuilt kernel/modules/firmware has been
fixed. If TARGET_PREBUILT_KERNEL_DIR is set, it looks for the
kernel, System.map, module tarball, and firmware tarball in that
directory and uses those instead of building them. Using prebuilt
kernel significantly decreases incremental rebuild time, as the
kernel target does not need to be declared .PHONY.

() The kernel build logic is skipped entirely if TARGET_NO_KERNEL
is set.

() INSTALLED_* build variables set for additional kernel build
deliverables in base board configuration Android.mk.

() The extentions to installclean don't work; the FILES variable
is finalized by cleanbuild.mk which is included much earlier.
Make a note that this needs some attention.

Change-Id: Ie82e83ce66263eb9d045e666e00337787495c324

--- a/core/Makefile
+++ b/core/Makefile
@@ -762,7 +762,12 @@ define build-systemimage-target
       $(TARGET_OUT) $(systemimage_intermediates)/system_image_info.txt $(1)
 endef
 
-$(BUILT_SYSTEMIMAGE): $(INSTALLED_KERNEL_TARGET) $(INTERNAL_SYSTEMIMAGE_FILES) $(INTERNAL_USERIMAGES_DEPS)
+$(BUILT_SYSTEMIMAGE): $(INSTALLED_KERNEL_TARGET) \
+		      $(INSTALLED_MODULES_TARGET) \
+		      $(INSTALLED_KERNELFW_TARGET) \
+		      $(INTERNAL_SYSTEMIMAGE_FILES) \
+		      $(INTERNAL_USERIMAGES_DEPS) \
+
 	$(call build-systemimage-target,$@)
 
 INSTALLED_SYSTEMIMAGE := $(PRODUCT_OUT)/system.img
@@ -822,7 +827,11 @@ endif
 system_tar := $(PRODUCT_OUT)/system.tar
 INSTALLED_SYSTEMTARBALL_TARGET := $(system_tar).$(SYSTEM_TARBALL_FORMAT)
 $(INSTALLED_SYSTEMTARBALL_TARGET): PRIVATE_SYSTEM_TAR := $(system_tar)
-$(INSTALLED_SYSTEMTARBALL_TARGET): $(FS_GET_STATS) $(INTERNAL_SYSTEMIMAGE_FILES)
+$(INSTALLED_SYSTEMTARBALL_TARGET): $(FS_GET_STATS) \
+		$(INTERNAL_SYSTEMIMAGE_FILES) \
+		$(INSTALLED_MODULES_TARGET) \
+		$(INSTALLED_KERNELFW_TARGET) \
+
 	$(build-systemtarball-target)
 
 .PHONY: systemtarball-nodeps
