NO_UPSTREAM: Skip AOSP OTA/TFP rules if CUSTOM_OTA_MAKEFILE_RULES defined
This gets rid of a build warning and prevents actual errors later
if the generated OTA update filename is changed.

For: ANDROID-2009
Change-Id: I193067ed695f99899ee77e8011e0bdf1e5413131
Signed-off-by: Andrew Boie <andrew.p.boie@intel.com>

--- a/core/Makefile
+++ b/core/Makefile
@@ -1018,6 +1018,8 @@ OTATOOLS := $(DISTTOOLS) \
 .PHONY: otatools
 otatools: $(OTATOOLS)
 
+ifeq ($(CUSTOM_OTA_MAKEFILE_RULES),)
+
 # -----------------------------------------------------------------
 # A zip of the directories that map to the target filesystem.
 # This zip can be used to create an OTA package or filesystem image
@@ -1225,6 +1227,7 @@ endif    # recovery_fstab is defined
 endif    # TARGET_NO_KERNEL != true
 endif    # TARGET_DEVICE != generic*
 endif    # TARGET_PRODUCT != sdk
+endif    # CUSTOM_OTA_MAKEFILE_RULES not defined
 
 # -----------------------------------------------------------------
 # A zip of the tests that are built when running "make tests".
