build: Conditionally include iago image creation Makefile
This file contains directives which cannot go in an Android.mk
and needs to be after they all have been included, similar to the
other Android image directives in build/core/Makefile.

Change-Id: I4c07f13a857f19052e15c562805f8f64452e4c3d
Signed-off-by: Andrew P. Boie <andrew.p.boie@intel.com>

--- a/core/Makefile
+++ b/core/Makefile
@@ -1004,6 +1004,9 @@ endif # BOARD_CACHEIMAGE_FILE_SYSTEM_TYPE
 ifeq ($(TARGET_USE_DISKINSTALLER),true)
 include bootable/diskinstaller/config.mk
 endif
+ifeq ($(TARGET_USE_IAGO),true)
+include bootable/iago/image.mk
+endif
 
 # -----------------------------------------------------------------
 # host tools needed to build dist and OTA packages
